--- a/index.html
+++ b/index.html
@@ -532,13 +532,13 @@
             <div class="sc-cBNeex dWtYLN" style="margin-top:15px;">
               <div class="sc-kEjbQP bIQika"></div>
               <div class="sc-hiSbEG aFkCK"><span id="mintnumber"></span> / 10,000</div>
-              <button onclick="sendTransaction()"> send</button>
+              
             </div>
             <div class="sc-jJEKmz mhjY">
               <div class="container_metamask_content-btn"
                 style="text-align: center;justify-content: center;">
                 <button class="metamask_content-btn sc-fKFxtB fpflfx btn btn-outline-dark w-button"
-                style="font-weight:bold;font-size: 20px;border:none;outline:none;padding:10px;border-radius:50px;margin-top:15px;background-image: linear-gradient(to right, #f6d365 0%, #fda085 51%, #f6d365 100%);color:#2c2c2c;border-bottom:5px solid #6c583d;" onclick="sendTransaction()">Connect Wallet</button>
+                style="font-weight:bold;font-size: 20px;border:none;outline:none;padding:10px;border-radius:50px;margin-top:15px;background-image: linear-gradient(to right, #f6d365 0%, #fda085 51%, #f6d365 100%);color:#2c2c2c;border-bottom:5px solid #6c583d;">Connect Wallet</button>
                 <div style="display: none;" class="buttonorer">
                   <h2 class=""></h2>
                   
